--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -9,7 +9,7 @@
 
     {{content-for "head"}}
 
-    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/vendor.css" integrity="">
     <link rel="stylesheet" href="assets/ember-project.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500" type="text/css">
 
