--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css" integrity="">
-    <link rel="stylesheet" href="assets/ember-project.css">
+    <link rel="stylesheet" href="assets/ember-project.css" integrity="">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500" type="text/css">
 
     {{content-for "head-footer"}}
