Spacing out the timeline element further, to create a more spacious environment for images

--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+	<!-- some day take integrity out, when the problem is fixed with either chrome or ember... -->
     <link rel="stylesheet" href="assets/vendor.css" integrity="">
     <link rel="stylesheet" href="assets/ember-project.css" integrity="">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,500" type="text/css">
