--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -16,11 +16,11 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body id="skrollr-body">
     {{content-for "body"}}
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/ember-project.js"></script>
+	<script src="assets/vendor.js"></script>
+	<script src="assets/ember-project.js"></script>
 
     {{content-for "body-footer"}}
   </body>
